--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=IBM+Plex+Sans:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="90" tabindex="0" class="letterbox">
+<body data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="90" tabindex="0" class="letterbox" data-mobile-safe="true">
   <div class="grain"></div>
+  <div class="page-wrap" style="overflow-x: hidden;" data-mobile-safe="true">
   <!-- Navigation -->
   <nav id="mainNav" class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
@@ -97,7 +98,7 @@
           </div>
         </div>
         <div class="col-lg-6 reveal" data-reveal="right">
-          <div class="stack-banner">
+          <div class="stack-banner banner-frame">
             <img src="assets/img/group-stack.png" class="img-fluid w-100" alt="One Group One Stack banner" loading="lazy" decoding="async">
           </div>
         </div>
@@ -115,7 +116,7 @@
           <h3 class="fw-bold d-flex align-items-center gap-2">Call. Connect. Convert.<span class="ticker">-></span></h3>
           <p class="text-secondary mb-3">This is the revenue engine. Outbound CX is built for speed: call, connect, convert—without fluff. We run campaigns that generate meetings, recover customers, and create pipeline.</p>
           <div class="glass p-3 mb-3">
-            <div class="ratio ratio-21x9 rounded-3 overflow-hidden">
+            <div class="ratio ratio-21x9 rounded-3 overflow-hidden banner-frame">
               <img src="assets/img/banner-04.jpg" class="img-fluid w-100 h-100 object-fit-cover" alt="Outbound CX banner" loading="lazy" decoding="async">
             </div>
             <p class="text-secondary small mb-0 mt-2">Campaign creative, scripts and reporting dashboards—built for momentum and clarity.</p>
@@ -178,7 +179,7 @@
             <img src="assets/img/digify-bpo.png" alt="digify BPO logo" class="logo mb-3 img-fluid" loading="lazy" decoding="async">
             <h3 class="fw-bold">The world's first Zendesk-dedicated BPO</h3>
             <p class="text-secondary mb-2">The world’s first Zendesk-dedicated BPO—built for modern, automated CX. When your support needs to run 24/7 across channels, we plug in as an extension of your Zendesk operation.</p>
-            <div class="ratio ratio-21x9 rounded-3 overflow-hidden mb-2">
+            <div class="ratio ratio-21x9 rounded-3 overflow-hidden mb-2 banner-frame">
               <img src="assets/img/banner-03.jpg" class="img-fluid w-100 h-100 object-fit-cover" alt="digify BPO banner" loading="lazy" decoding="async">
             </div>
             <p class="text-secondary small mb-0">24/7 Zendesk-aligned staffing across channels, with back-office and automation support when volume spikes.</p>
@@ -694,8 +695,10 @@
           <h3 class="fw-bold">Turning Clicks Into Clients</h3>
           <p class="text-secondary">Turning clicks into clients. CX Leads builds the growth layer—positioning, ads, landing pages and conversion systems—so demand becomes pipeline that Outbound CX can close.</p>
           <div class="glass p-3 mb-3 orbit-card">
-            <img src="assets/img/banner-02.jpg" class="img-fluid w-100 rounded-3" alt="CX Leads banner" loading="lazy" decoding="async">
-            <p class="text-secondary small mb-0 mt-2">Landing pages, lead magnets and reporting views—built for fast iteration and clean handoff.</p>
+            <div class="banner-frame">
+              <img src="assets/img/banner-02.jpg" class="img-fluid w-100 rounded-3" alt="CX Leads banner" loading="lazy" decoding="async">
+            </div>
+            <p class="text-secondary small mb-0 mt-2">Landing pages, lead magnets and reporting views-built for fast iteration and clean handoff.</p>
           </div>
           <div class="proof-strip mb-3">
             <div class="proof-tile">Full-Funnel Growth<br><small class="text-secondary">Strategy → creative → conversion (rapid iterations)</small></div>
@@ -763,7 +766,7 @@
           <h3 class="fw-bold">South Africa's #1 Zendesk Partner</h3>
           <p class="text-secondary mb-3">South Africa’s #1 Zendesk Partner. We scope, build and optimise Zendesk environments that feel effortless for customers and powerful for agents—then we keep improving them.</p>
           <div class="glass p-3 orbit-card">
-            <div class="ratio ratio-16x9 rounded-3 overflow-hidden">
+            <div class="ratio ratio-16x9 rounded-3 overflow-hidden banner-frame">
               <img src="assets/img/banner-01.jpg" class="img-fluid w-100 rounded-3" alt="CX Experts banner" loading="lazy" decoding="async">
             </div>
             <p class="text-secondary small mb-0 mt-2">Clean foundations, fast wins, and practical automation—measured and iterated.</p>
@@ -964,6 +967,7 @@
   <div class="sticky-cta glass p-2">
     <a class="btn btn-primary btn-sm" href="#contact">Book a Strategy Call</a>
     <a class="btn btn-outline-light btn-sm" href="mailto:beverlene@digifycx.com">Email Us</a>
+  </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
