FIX: Update image file extensions from .jpg to .png for consistency and improved loading

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <p class="text-secondary mb-3">This is the revenue engine. Outbound CX is built for speed: call, connect, convert—without fluff. We run campaigns that generate meetings, recover customers, and create pipeline.</p>
           <div class="glass p-3 mb-3">
             <div class="ratio ratio-21x9 rounded-3 overflow-hidden banner-frame">
-              <img src="assets/img/banner-04.jpg" class="img-fluid w-100 h-100 object-fit-cover" alt="Outbound CX banner" loading="lazy" decoding="async">
+              <img src="assets/img/banner-04.png" class="img-fluid w-100 h-100 object-fit-cover" alt="Outbound CX banner" loading="lazy" decoding="async">
             </div>
             <p class="text-secondary small mb-0 mt-2">Campaign creative, scripts and reporting dashboards—built for momentum and clarity.</p>
           </div>
@@ -202,7 +202,7 @@
             <h3 class="fw-bold">The world's first Zendesk-dedicated BPO</h3>
             <p class="text-secondary mb-2">The world's first Zendesk-dedicated BPO—built for modern, automated CX. When your support needs to run 24/7 across channels, we plug in as an extension of your Zendesk operation.</p>
             <div class="ratio ratio-21x9 rounded-3 overflow-hidden mb-2 banner-frame">
-              <img src="assets/img/banner-03.jpg" class="img-fluid w-100 h-100 object-fit-cover" alt="digify BPO banner" loading="lazy" decoding="async">
+              <img src="assets/img/banner-03.png" class="img-fluid w-100 h-100 object-fit-cover" alt="digify BPO banner" loading="lazy" decoding="async">
             </div>
             <p class="text-secondary small mb-0">24/7 Zendesk-aligned staffing across channels, with back-office and automation support when volume spikes.</p>
           </div>
@@ -768,7 +768,7 @@
           <p class="text-secondary">Turning clicks into clients. CX Leads builds the growth layer—positioning, ads, landing pages and conversion systems—so demand becomes pipeline that Outbound CX can close.</p>
           <div class="glass p-3 mb-3 orbit-card">
             <div class="banner-frame">
-              <img src="assets/img/banner-02.jpg" class="img-fluid w-100 rounded-3" alt="CX Leads banner" loading="lazy" decoding="async">
+              <img src="assets/img/banner-02.png" class="img-fluid w-100 rounded-3" alt="CX Leads banner" loading="lazy" decoding="async">
             </div>
             <p class="text-secondary small mb-0 mt-2">Landing pages, lead magnets and reporting views-built for fast iteration and clean handoff.</p>
           </div>
@@ -862,7 +862,7 @@
           <p class="text-secondary mb-3">South Africa's #1 Zendesk Partner. We scope, build and optimise Zendesk environments that feel effortless for customers and powerful for agents—then we keep improving them.</p>
           <div class="glass p-3 orbit-card">
             <div class="ratio ratio-16x9 rounded-3 overflow-hidden banner-frame">
-              <img src="assets/img/banner-01.jpg" class="img-fluid w-100 rounded-3" alt="CX Experts banner" loading="lazy" decoding="async">
+              <img src="assets/img/banner-01.png" class="img-fluid w-100 rounded-3" alt="CX Experts banner" loading="lazy" decoding="async">
             </div>
             <p class="text-secondary small mb-0 mt-2">Clean foundations, fast wins, and practical automation—measured and iterated.</p>
           </div>
